RESOLVED FIXED171982
The iBooks application is not able to get current position.
https://bugs.webkit.org/show_bug.cgi?id=171982
Summary The iBooks application is not able to get current position.
Per Arne Vollan
Reported 2017-05-11 11:48:30 PDT
Geolocation requests from iBooks are currently being blocked.
Attachments
Patch (2.29 KB, patch)
2017-05-11 11:57 PDT, Per Arne Vollan
bfulgham: review+
Per Arne Vollan
Comment 1 2017-05-11 11:57:07 PDT
Brent Fulgham
Comment 2 2017-05-11 12:26:16 PDT
Comment on attachment 309742 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=309742&action=review lgtm. r=me. > Source/WebCore/ChangeLog:4 > + https://bugs.webkit.org/show_bug.cgi?id=171982 Add radar here, please. > Source/WebCore/ChangeLog:8 > + Geolocation requests from iBooks are currently blocked. Make an excemption from the policy for iBooks. EXEMPTION
Per Arne Vollan
Comment 3 2017-05-12 02:59:54 PDT
Per Arne Vollan
Comment 4 2017-05-12 03:10:23 PDT
Per Arne Vollan
Comment 5 2017-05-12 03:11:11 PDT
(In reply to Brent Fulgham from comment #2) > Comment on attachment 309742 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=309742&action=review > > lgtm. r=me. > > > Source/WebCore/ChangeLog:4 > > + https://bugs.webkit.org/show_bug.cgi?id=171982 > > Add radar here, please. > > > Source/WebCore/ChangeLog:8 > > + Geolocation requests from iBooks are currently blocked. Make an excemption from the policy for iBooks. > > EXEMPTION Thanks for reviewing!
Note You need to log in before you can comment on or make changes to this bug.