The iBooks application is not able to get current position. https://bugs.webkit.org/show_bug.cgi?id=171982 rdar://problem/29318409

Reviewed by Brent Fulgham.

Geolocation requests from iBooks are currently blocked. Make an exemption from the policy for iBooks.

No new tests since we currently can't mock the iBooks application bundle ID.

* Modules/geolocation/Geolocation.cpp:
(WebCore::isRequestFromIBooks):
(WebCore::Geolocation::shouldBlockGeolocationRequests):


Canonical link: https://commits.webkit.org/188961@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216757 268f45cc-cd09-0410-ab3c-d52691b4dbfc